@@ -68,6 +68,12 @@ http://sourceforge.net/tracker/index.php?func=detail&aid=<id>&group_id=5470&atid
 
 - Loosely based on patch #103249 -- Fix core dumps in PyUnicode_Count
 
+- #125981 -- socketmodule.c --  closing sockets was not thread-safe.
+
+- Use openssl/*.h to include the OpenSSL header files
+
+- Patch #103636: Allow writing strings containing null bytes to an SSL socket
+
 What's New in Python 2.0?
 =========================
 
